Adds working map editor (still some smaller things to do) and 2FA locally without sending emails
