# app/src/Repository/RouteBackupRepository.php
@@ -1,0 +1,27 @@
+<?php
+
+namespace App\Repository;
+
+use App\Entity\RouteBackup;
+use Doctrine\Bundle\DoctrineBundle\Repository\ServiceEntityRepository;
+use Doctrine\Persistence\ManagerRegistry;
+
+/**
+ * @extends ServiceEntityRepository<RouteBackup>
+ */
+class RouteBackupRepository extends ServiceEntityRepository
+{
+    public function __construct(ManagerRegistry $registry)
+    {
+        parent::__construct($registry, RouteBackup::class);
+    }
+
+    /** @return RouteBackup[] */
+    public function findAllOrdered(): array
+    {
+        return $this->createQueryBuilder('b')
+            ->orderBy('b.createdAt', 'DESC')
+            ->getQuery()
+            ->getResult();
+    }
+}
